# Model-comparison

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
benchmark/examples/: __about__.py  __init__.py
benchmark/examples/gaussian/analysis/: analysis_plot.py  mmd_err.py  plot.py  summry_diagnostic.py
benchmark/examples/gaussian/analytic/: analytic.py
benchmark/examples/gaussian/approximators/: approximators.py  estimation.py  simulator.py
benchmark/examples/gaussian/comparison/: comparison.py  plot.py
benchmark/examples/gaussian/datasets/: analysis.py  calculation.py  datasets.py  stan_dataset.py
benchmark/examples/gaussian/direct/: approximators.py  calculator.py  direct_checkpoint.ipynb  simulator.py
benchmark/examples/gaussian/networks/: .gitignore  direct.keras  direct_df3.keras  direct_s_20d_10n.keras
benchmark/examples/gaussian/notebooks/: .gitignore  01.ipynb  02.ipynb  03.ipynb  calculation.ipynb  calculation_summary.ipynb  chechpoint.ipynb  comparison.ipynb  comparison_2.ipynb  direct copy.ipynb  direct.ipynb  direct_s_20d_100n.ipynb  direct_s_20d_10n.ipynb  direct_scale.ipynb  logbf12_dm_comparison.ipynb  logbf12_dm_comparison_mu5.ipynb  m1.ipynb  m1_m7_ood_analysis copy.ipynb  m1_m7_ood_analysis.ipynb  m1_s_20d_100n.ipynb  m1_s_20d_10n.ipynb  m1_s_20d_50n.ipynb  m1_s_40d_10n.ipynb  m1_s_80d_10n.ipynb  m2.ipynb  m2_s_20d_100n.ipynb  m2_s_20d_10n.ipynb  m2_s_20d_50n.ipynb  m2_s_20d_50n_mu5.ipynb  m2_s_40d_10n.ipynb  m2_s_80d_10n.ipynb  m2_s_summary_dimension_comparison.ipynb  m3.ipynb  m3_s_20d_100.ipynb  m3_s_20d_100n.ipynb  m4_s_20d_100n.ipynb  m4_s_20d_10n.ipynb  m4_s_40d_10n.ipynb  m4_s_80d_10n.ipynb  ood_20d_10n_paper_fit_plots.ipynb  (+22 more)
benchmark/examples/gaussian/npe/: estimation.py
benchmark/examples/gaussian/results/m1_m7_ood/: logml_distance_frame.csv  logml_summary.csv  pmp_ambiguity_frame.csv  pmp_summary.csv
benchmark/examples/gaussian/results/ood_20d_100n/: logml_distance_frame_20d_100n.csv  logml_summary_20d_100n.csv  pmp_ambiguity_frame_20d_100n.csv  pmp_summary_20d_100n.csv  posterior_distance_frame_20d_100n.csv
benchmark/examples/gaussian/results/ood_20d_10n/: logml_distance_frame_20d_10n.csv  logml_summary_20d_10n.csv  pmp_ambiguity_frame_20d_10n.csv  pmp_summary_20d_10n.csv  posterior_distance_frame_20d_10n.csv
benchmark/examples/gaussian/stan/: .gitignore  student_t  student_t.rds  student_t.stan  student_t_gold_df10.r  student_t_gold_df3.r  student_t_gold_df3_n0.r  student_t_gold_df3_n10.r  student_t_gold_m1.r  student_t_gold_m2.r  student_t_gold_m3.r  student_t_gold_m4.r  student_t_gold_n0.r  student_t_gold_n10.r
(+2528 files in other folders)
