[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark"
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Yiming Zang", email = "yiming.zang@tu-dortmund.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Yiming Zang/benchmark#readme"
Issues = "https://github.com/Yiming Zang/benchmark/issues"
Source = "https://github.com/Yiming Zang/benchmark"

[tool.hatch.build.targets.wheel]
packages = ["benchmark"]
